<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/actionbar_bg_color" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/activity_main_title"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_title_text_size" />
        
          <TextView 
            android:id="@+id/tv_load_data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/load_data"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_title_button_text_size"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin" >

        <Button
            android:id="@+id/btn_wait_receive_goods"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/button_common_bg"
            android:text="@string/wait_for_receive_goods"
            android:textColor="@color/white" />
        
         <Button
            android:id="@+id/btn_have_scanned_goods"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/button_common_bg"
            android:text="已扫描"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/btn_already_receive_goods"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/button_common_bg"
            android:text="未找到"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>